@@ -4,6 +4,13 @@ Changelog
 1.11 - Unreleased
 -----------------
 
+* Handle untrusted server certificates by asking the user what to do.
+  [fschulze]
+
+* Properly handle user input for authorization by using locks to prevent
+  problems with parallel checkouts.
+  [fschulze]
+
 * Only checkout/update packages in auto-checkout or with ``update = true``
   option when running buildout.
   [fschulze]
